// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`express integration update req values req.body 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"3-QDkmAz0AG1J53zfLvlKHt8fCZ/o\\"",
  },
  "req": Object {
    "data": Object {
      "first": "john",
      "role": "admin",
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": "lol",
}
`;

exports[`express integration update req values req.headers 1`] = `
Object {
  "accept": "application/json",
  "accept-encoding": "gzip, deflate",
  "connection": "close",
  "secret-header": "@@@@@@",
  "user-agent": "node-superagent/3.8.2",
}
`;

exports[`express integration update req values req.headers 2`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"1-E/vXnD05Dl1lhaIeEf9ewZcM/ww\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {
      "accept": "application/json",
    },
    "method": "GET",
  },
  "status": 200,
  "text": "k",
}
`;

exports[`express integration update req values req.params 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"1-E/vXnD05Dl1lhaIeEf9ewZcM/ww\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "k",
}
`;

exports[`express integration update req values req.query 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
    "etag": "W/\\"1-E/vXnD05Dl1lhaIeEf9ewZcM/ww\\"",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 200,
  "text": "k",
}
`;

exports[`express integration validations req.body 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "0",
  },
  "req": Object {
    "data": Object {
      "first": "john",
      "last": 123,
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 400,
  "text": "",
}
`;

exports[`express integration validations req.headers 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "0",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {
      "accept": "application/json",
    },
    "method": "GET",
  },
  "status": 400,
  "text": "",
}
`;

exports[`express integration validations req.params 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "0",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 400,
  "text": "",
}
`;

exports[`express integration validations req.query 1`] = `
Object {
  "header": Object {
    "connection": "close",
    "content-length": "0",
  },
  "req": Object {
    "data": undefined,
    "headers": Object {},
    "method": "GET",
  },
  "status": 400,
  "text": "",
}
`;
